@@ -1,3 +1,9 @@
+2008-04-05  Jimmy Retzlaff  <jimmy@retzlaff.com>
+
+	* Using the options compressed=1, bundle_files=3, and zipfile=None at
+	the same time now works; patch from Alexey Borzenkov (sf request id
+	1707920)
+
 2008-04-04  Thomas Heller  <theller@python.net>
 
 	* py2exe\boot_ctypes_com_server.py: Port this module from
@@ -22,6 +28,10 @@
 	py2exe now renames the pyd files that it copies into the dist
 	directory so that they include the package name.  This prevents
 	name conflicts.
+
+2007-03-26  Mark Hammond  <mhammond@skippinet.com.au>
+	* Samples for the 'typelibs' support, including the new option of
+	pre-generating a typelib and specifying the file as an input to py2exe
 
 2006-12-27  Jimmy Retzlaff  <jimmy@retzlaff.com>
 
